--- a/amazon.html
+++ b/amazon.html
@@ -19,18 +19,37 @@
                 <p class="add-first">Deliver to Govind</p>
                 <div class="add-icon">
                     <i class="fa-solid fa-location-crosshairs"></i>
-                    <p class="add-second">Gurugram</p>
+                    <p class="add-second">Gurugram, 122101</p>
                 </div>
             </div>
 
             <div class="nav-search">
                 <select class="search-select">
-                    <option>All</option>
+                    <option class="search-txt">All</option>
                 </select>
                 
-                <input placeholder="Search Amazon.in" class="search-input">
+                <input placeholder="Search Amazon.in" class="search-input"> 
                 <div class="search-icon">
                     <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+            </div>
+
+            <div class="border">
+                <div class="nav-flag ">
+                    <img src="Images/flag_24px.png" alt="languages">
+                    <div>
+                        <label >
+                            <select class="nav-flag-lang">
+                                <option>English</option>
+                                <option>Hindi</option>
+                                <option>Marathi</option>
+                                <option>Tamil</option>
+                                <option>Telgu</option>
+                                <option>Urdu</option>
+                                <option>Hindi</option>
+                            </select>
+                        </label>
+                    </div>
                 </div>
             </div>
 
@@ -44,8 +63,9 @@
                 <p class="nav-second">& Orders</p>
             </div>
 
-            <div class="nav-cart">
-                <img class="img-cart" src="Images/shopping_cart_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt="AddToCartSymbol">
+            <div class="nav-cart border">
+                <i class="fa-solid fa-cart-shopping"></i>
+                cart
             </div>
 
         </div>
@@ -86,7 +106,7 @@
 
        
 
-    </header> 
+    <!-- </header> 
     <div class="shop-section">
         <div class="box1 box">
             <div class="box-content">
@@ -216,6 +236,6 @@
                 ©1999-2024, Amazon.com, Inc. or its affiliates
             </div>
         </div>
-    </footer>
+    </footer> -->
 </body>
 </html>
