--- a/amazon.html
+++ b/amazon.html
@@ -106,7 +106,7 @@
 
        
 
-    <!-- </header> 
+    </header> 
     <div class="shop-section">
         <div class="box1 box">
             <div class="box-content">
@@ -181,7 +181,7 @@
 
         <div class="foot-panel-2">
             <ul>
-                <li>Get to Know Us</li>
+                <a>Get to Know Us</a>
                 <li>Career</li>
                 <li>Blog</li>
                 <li>About Amazon </li>
@@ -191,7 +191,7 @@
             </ul>
 
             <ul>
-                <li>Get to Know Us</li>
+                <a>Get to Know Us</a>
                 <li>Career</li>
                 <li>Blog</li>
                 <li>About Amazon </li>
@@ -201,7 +201,7 @@
             </ul>
 
             <ul>
-                <li>Get to Know Us</li>
+                <a>Get to Know Us</a>
                 <li>Career</li>
                 <li>Blog</li>
                 <li>About Amazon </li>
@@ -211,7 +211,7 @@
             </ul>
 
             <ul>
-                <li>Get to Know Us</li>
+                <a>Get to Know Us</a>
                 <li>Career</li>
                 <li>Blog</li>
                 <li>About Amazon </li>
@@ -236,6 +236,6 @@
                 ©1999-2024, Amazon.com, Inc. or its affiliates
             </div>
         </div>
-    </footer> -->
+    </footer>
 </body>
 </html>
