--- a/amazon.html
+++ b/amazon.html
@@ -227,8 +227,8 @@
 
         <div class="foot-panel-4">
             <div class="pages">
-                <a href="">Conditions of use</a>
-                <p>Privacy Notice</p>
+                <a href="" class="pages-1">Conditions of use</a>
+                <a class="pages-2">Privacy Notice</a>
                 <a href="">Your ads privacy choices</a>
             </div>
 
